--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Page d'accueil du Murat.">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images\Murat.svg">
     <title>"Murat | Accueil"</title>
   </head>
-
   <body>
     <header>
-      
+      <div class="container">
+        <img src="Images\Vache.svg" alt="Logo vache" height="200px"> 
+        <nav>
+            <ul>
+                <li>
+                    <a href="???" target="_blank" title= "Allez sur le menu de bienvenue"> Bienvenue </a>
+                </li>
+                <li>
+                    <a href="???" target="_blank" title= "Allez sur la carte"> Carte </a>
+                </li>
+                <li>
+                  <a href="???" target="_blank" title= "Allez sur la page des réservations"> Réservations </a>
+                </li>
+                <li>
+                  <a href="???" target="_blank" title= "Allez sur la page des informations supplémentaires"> Informations </a>
+                </li>
+                <li>
+                  <a href="???" target="_blank" title= "Nous contactez"> Contact </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     </header>
 
     <main>
@@ -20,4 +41,3 @@
     </footer>        
   </body>
 </html>
-
