--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>
-                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Allez sur le menu de bienvenue"> Bienvenue </a>
+                  <a href="" target="_blank" title= "Allez sur le menu de bienvenue"> Bienvenue </a>
                 </li>
                 <li>
                   <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Allez sur la carte"> Carte </a>
