--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
     <link rel="icon" type="image/png" sizes="16x16" href="Images\Murat.svg">
     <link rel="stylesheet" type="text/css" href="CSS\style.css">
@@ -14,27 +15,32 @@
         <nav>
           <ul>
             <li>
-              <a href="" target="_blank" title= "Allez sur le menu de bienvenue"> Bienvenue </a>
+              <a href="index.html" title= "Allez sur le menu de bienvenue">Bienvenue</a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Allez sur la carte"> Carte </a>
+              <a href="carte.html" title= "Allez sur la carte">Carte</a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Allez sur la page des réservations"> Réservations </a>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title= "Allez sur la page des réservations">Réservations</a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Allez sur la page des informations supplémentaires"> Informations </a>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title= "Allez sur la page des informations supplémentaires">Informations</a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title= "Nous contactez"> Contact </a>
+              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title= "Nous contactez">Contact</a>
             </li>
           </ul>
         </nav>
-    </div>
+      </div>
     </header>
 
     <main>
-      
+      <div class="bienvenue">
+        <h1>Bienvenue au restaurant Le Murat</h1>
+        <video autoplay loop muted>
+          <source src="/Vidéos/Vidéo_Présentation.mp4" type=video/mp4>
+        </video>
+      </div>
     </main>
       
     <footer>
