--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <main>
       <div class="bienvenue">
         <h1>Bienvenue au restaurant Le Murat</h1>
-        <video autoplay loop muted>
-          <source src="/Vidéos/Vidéo_Présentation.mp4" type=video/mp4>
+        <video autoplay loop>
+          <source src="/Vidéos/présentation.mp4" type=video/mp4>
         </video>
       </div>
     </main>
