--- a/reservation.html
+++ b/reservation.html
@@ -35,12 +35,7 @@
     </header>
 
     <main>
-      <div class="bienvenue">
-        <h1>Bienvenue au restaurant Le Murat</h1>
-        <video autoplay loop>
-          <source src="/Vidéos/présentation.mp4" type=video/mp4>
-        </video>
-      </div>
+        RESERVATION
     </main>
       
     <footer>
