--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Page d'accueil du Murat.">
     <link rel="icon" type="image/png" sizes="16x16" href="Images\Murat.svg">
     <link rel="stylesheet" type="text/css" href="CSS\style.css">
-    <title>"Murat | Accueil"</title>
+    <title>Murat | Contact</title>
   </head>
   <body>
     <header>
