Ajout de l'ensemble des fichiers + Update nom de class bannière

--- a/carte.html
+++ b/carte.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="banner">
         <img src="Images\Vache3.svg" alt="Logo vache" height="200px"> 
         <nav>
           <ul>
