Ajout du plat du jour

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images\Murat.svg">
-    <link rel="stylesheet" type="text/css" href="CSS\style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/Murat.svg">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Accueil</title>
   </head>
   
   <body>
     <header>
-      <img src="Images\Vache3.svg" alt="Logo vache" height="200px"> 
+      <img src="Images/Vache3.svg" alt="Logo vache" height="200px"> 
       <nav>
         <ul>
           <li>
@@ -33,8 +33,14 @@
     <main>
       <div class="bienvenue">
         <h1>Bienvenue au restaurant Le Murat</h1>
-        <video autoplay loop>
-          <source src="/Vidéos/présentation.mp4" type=video/mp4>
+        <div classe="plat_du_jour">
+          <h2>Plat du jour</h2>
+          <h3>Carpaccio de flétan au foie gras et truffes</h2>
+          <img src="Images/carapaccio.jpg" alt="Plat du jour" height="300px">
+          <p>38 €</p>
+        </div>
+        <video autoplay muted loop>
+          <source src="Vidéos/présentation.mp4" type=video/mp4>
         </video>
       </div>
     </main>
