Ajout d'une présentation

--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
     <main>
       <div class="bienvenue">
         <h1>Bienvenue au restaurant Le Murat</h1>
-        <div classe="plat_du_jour">
+        
+        <div class="plat_du_jour">
           <h2>Plat du jour</h2>
           <h3>Carpaccio de flétan au foie gras et truffes</h2>
           <img src="Images/carapaccio.jpg" alt="Plat du jour" height="300px">
           <p>38 €</p>
+        </div>
+
+        <div class="presentation">
+          <h2>La cuisine, plus qu'une passion</h2>
+          <p>Nous transmettons notre savoir-faire culinaire de générations en générations.
+          C'est depuis 1910 que notre chic bistrot propose aux fines bouches parisiennes,
+          des saveurs irrésistibles, grâce aux chefs les plus talentueux du pays.
+          Nous cuisinons uniquement des produits frais du terroir français, sélectionnés
+          avec soin.</p>
         </div>
         <video autoplay muted loop>
           <source src="Vidéos/présentation.mp4" type=video/mp4>
