Ajouts d'une table pour les plats favoris + ajouts d'infos dans la description + images + update structure

--- a/index.html
+++ b/index.html
@@ -47,8 +47,49 @@
           C'est depuis 1910 que notre chic bistrot propose aux fines bouches parisiennes,
           des saveurs irrésistibles, grâce aux chefs les plus talentueux du pays.
           Nous cuisinons uniquement des produits frais du terroir français, sélectionnés
-          avec soin.</p>
+          avec soin. Venez faire passer un moment inoubliable à vos papilles gustatives
+          dans notre restaurant décoré chaleureusement.</p>
+          <img src="Images/salle.jpg" alt="Salle principale" height="300px">
         </div>
+
+        <div class="plats_favoris">
+          <table>
+            <tr>
+              <td>
+                <p>Plat1</p>
+              </td>
+              <td>
+                <p>Plat2</p>
+              </td>
+              <td>
+                <p>Plat3</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Plat4</p>
+              </td>
+              <td>
+                <p>Plat5</p>
+              </td>
+              <td>
+                <p>Plat6</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Plat7</p>
+              </td>
+              <td>
+                <p>Plat8</p>
+              </td>
+              <td>
+                <p>Plat9</p>
+              </td>
+            </tr>
+          </table>
+        </div>
+        
         <video autoplay muted loop>
           <source src="Vidéos/présentation.mp4" type=video/mp4>
         </video>
