--- a/reservation.html
+++ b/reservation.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="banner">
-        <img src="Images\Vache3.svg" alt="Logo vache" height="200px"> 
+        <img src="Images\logos\Vache3.svg" alt="Logo vache" height="200px"> 
         <nav>
           <ul>
             <li>
@@ -36,7 +36,7 @@
     </main>
       
     <footer>
-      <img src="Images/Murat.svg" alt="Logo Murat" height="100px">
+      <img src="Images\logos/Murat.svg" alt="Logo Murat" height="100px">
     </footer>        
   </body>
 </html>
