--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images\Murat.svg">
-    <link rel="stylesheet" type="text/css" href="CSS\style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/Murat.svg">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Contact</title>
   </head>
   <body>
     <header>
       <div class="banner">
-        <img src="Images\logos\Vache3.svg" alt="Logo vache" height="200px"> 
+        <img src="Images/logos/Vache3.svg" alt="Logo vache" height="200px"> 
         <nav>
           <ul>
             <li>
@@ -36,7 +36,7 @@
     </main>
       
     <footer>
-      <img src="Images\logos/Murat.svg" alt="Logo Murat" height="100px">
+      <img src="Images/logos/Murat.svg" alt="Logo Murat" height="100px">
     </footer>        
   </body>
 </html>
