Correction d'un mot + recadrage d'une photo

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <img src="Images/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="200px">
               </td>
               <td>
-                <p>Pâtes fraiches au foie gras aux magrets et aux truffes</p>
+                <p>Pâtes fraiches au foie gras, magrets et truffes</p>
                 <img src="Images/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="200px">
               </td>
             </tr>
