IDs ajoutés + image salle retirée

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </video>
       
       <!-- Plat du jour -->
-      <div class="plat_du_jour">
+      <div id="plat_du_jour" class="plat_du_jour">
         <h2>Plat du jour</h2>
         <h3>Carpaccio de flétan au foie gras et truffes</h2>
         <img src="Images/carapaccio.jpg" alt="Plat du jour" height="300px">
@@ -50,7 +50,7 @@
       </div>
 
       <!-- Plats favoris des clients -->
-      <div class="plats_favoris">
+      <div id="plats_favoris" class="plats_favoris">
         <h2>Les plats favoris de nos clients</h2>
         <table>
           <tr>
@@ -99,7 +99,7 @@
       </div>
 
       <!-- Slideshow de l'équipe en cuisine -->
-      <div class="ekip667killuavietordlaprodavecleLUV">
+      <div id="équipe" class="équipe">
         <h2>La cuisine, plus qu'une passion</h2>
         <p>Nous transmettons notre savoir-faire culinaire de générations en générations.
         C'est depuis 1910 que notre chic bistrot propose aux fines bouches parisiennes,
@@ -107,7 +107,6 @@
         Nous cuisinons uniquement des produits frais du terroir français, sélectionnés
         avec soin. Venez faire passer un moment inoubliable à vos papilles gustatives
         dans notre restaurant décoré chaleureusement.</p>
-        <img src="Images/salle.jpg" alt="Salle principale" height="300px">
       </div>
     </main>
       
