--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
           <div class="slide animation">
             <img src="Images/Équipe/ademar_okardetour.jpg" style="width:100%">
-            <p>Ademat OKARDETOUR - Chef rôtissier</p>
+            <p>Idemat OKARDETOUR - Chef rôtissier</p>
           </div>
         </div>
         
