--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
   <body>
     <!-- Bannière -->
     <header>
-      <img src="Images/Logos/Vache3.svg" alt="Logo vache" height="150px">
-      <br>
-      <img src="Images/Logos/Murat.svg" alt="Logo Murat" height="50px">
+      <div class="Logos">
+        <img src="Images/Logos/Vache3.svg" alt="Logo vache" height="150px">
+        <img src="Images/Logos/Murat.svg" alt="Logo Murat" height="50px">
+      </div>
       <nav>
-        <ul>
-          <li>
-            <a href="index.html" title= "Allez à l'accueil">Accueil</a>
-          </li>
-          <li>
-            <a href="carte.html" title= "Allez sur la carte">Carte</a>
-          </li>
-          <li>
-            <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
-          </li>
-          <li>
-            <a href="contact.html" title= "Nous contactez">Contact</a>
-          </li>
-        </ul>
+        <div class="menu">
+          <ul>
+            <li>
+              <a href="index.html" title= "Allez à l'accueil">Accueil</a>
+            </li>
+            <li>
+              <a href="carte.html" title= "Allez sur la carte">Carte</a>
+            </li>
+            <li>
+              <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
+            </li>
+            <li>
+              <a href="contact.html" title= "Nous contactez">Contact</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
