--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     <!-- Corps de la page -->
     <div class="main">
       <main>
-        <h1>Bienvenue au restaurant Le Murat</h1>
+        <div class="bienvenue">
+          <h1>Bienvenue au restaurant Le Murat</h1>
 
-        <video autoplay muted loop>
-          <source src="Vidéos/présentation.mp4" type=video/mp4>
-        </video>
+          <video autoplay muted loop>
+            <source src="Vidéos/présentation.mp4" type=video/mp4>
+          </video>
+        </div>
         
         <!-- Plat du jour -->
         <div id="plat_du_jour" class="plat_du_jour">
