--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Logos/Vache3.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="Pictures/Logos/Vache3.svg">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Accueil</title>
   </head>
@@ -14,8 +14,8 @@
     <div class="banner">
       <header>
         <div class="Logos">
-          <img src="Images/Logos/Vache3.svg" alt="Logo vache" height="150px">
-          <img src="Images/Logos/Murat.svg" alt="Logo Murat" height="50px">
+          <img src="Pictures/Logos/Vache3.svg" alt="Logo vache" height="150px">
+          <img src="Pictures/Logos/Murat.svg" alt="Logo Murat" height="50px">
         </div>
         <nav>
           <div class="menu">
@@ -45,7 +45,7 @@
           <h1>Bienvenue au restaurant Le Murat</h1>
 
           <video autoplay muted loop>
-            <source src="Vidéos/présentation.mp4" type=video/mp4>
+            <source src="Videos/présentation.mp4" type=video/mp4>
           </video>
         </div>
         
@@ -53,7 +53,7 @@
         <div id="plat_du_jour" class="plat_du_jour">
           <h2>Plat du jour</h2>
           <h3>Carpaccio de flétan au foie gras et truffes</h2>
-          <img src="Images/carapaccio.jpg" alt="Plat du jour" height="300px">
+          <img src="Pictures/carapaccio.jpg" alt="Plat du jour" height="300px">
           <p>38 €</p>
         </div>
 
@@ -64,43 +64,43 @@
             <tr>
               <td>
                 <p>Consommé de faisan aux cèpes et aux quenelles à la moelle</p>
-                <img src="Images/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori" height="200px">
+                <img src="Pictures/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori" height="200px">
               </td>
               <td>
                 <p>Filets de soles et rougets au romarin et légumes</p>
-                <img src="Images/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori" height="200px">
               </td>
               <td>
                 <p>Foie gras poêlé et chutney d'oignons</p>
-                <img src="Images/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori" height="200px">
               </td>
             </tr>
             <tr>
               <td>
                 <p>Filet Mignon en Croûte au Foie Gras & Morilles</p>
-                <img src="Images/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori" height="200px">
               </td>
               <td>
                 <p>Magrets de canard aux patates douces et cacao</p>
-                <img src="Images/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="200px">
               </td>
               <td>
                 <p>Pâtes fraiches au foie gras aux magrets et aux truffes</p>
-                <img src="Images/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="200px">
               </td>
             </tr>
             <tr>
               <td>
                 <p>Tartare de bar au gingembre</p>
-                <img src="Images/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori" height="200px">
               </td>
               <td>
                 <p>Velouté de cèpes et châtaignes</p>
-                <img src="Images/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori" height="200px">
               </td>
               <td>
                 <p>Homard grillé, sabayon au champagne</p>
-                <img src="Images/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori" height="200px">
+                <img src="Pictures/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori" height="200px">
               </td>
             </tr>
           </table>
@@ -119,19 +119,19 @@
           <!-- Slideshow des chefs -->
           <div class="slideshow" style="max-width:500px">
             <div class="slide animation">
-              <img src="Images/Équipe/gerard_menvussa.png" style="width:100%">
+              <img src="Pictures/Équipe/gerard_menvussa.png" style="width:100%">
               <p>Gérard MENVUSSA - Chef étoilé</p>  
             </div>
             <div class="slide animation">
-              <img src="Images/Équipe/sam_shoff.jpg" style="width:100%">
+              <img src="Pictures/Équipe/sam_shoff.jpg" style="width:100%">
               <p>Sam SHOFF - Chef pâtissier</p>
             </div>
             <div class="slide animation">
-              <img src="Images/Équipe/aubin_sahalor.png" style="width:100%">
+              <img src="Pictures/Équipe/aubin_sahalor.png" style="width:100%">
               <p>Aubin SAHALOR - Chef saucier</p>  
             </div>
             <div class="slide animation">
-              <img src="Images/Équipe/ademar_okardetour.jpg" style="width:100%">
+              <img src="Pictures/Équipe/ademar_okardetour.jpg" style="width:100%">
               <p>Idemat OKARDETOUR - Chef rôtissier</p>
             </div>
           </div>
