--- a/carte.html
+++ b/carte.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="description" content="Page d'accueil du Murat.">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Murat.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="Pictures/Logos/Vache3.svg">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <title>Murat | Carte</title>
+    <title>Murat | Accueil</title>
   </head>
+
   <body>
+    <!-- Bannière -->
     <header>
-      <div class="banner">
-        <img src="Images/logos/Vache3.svg" alt="Logo vache" height="200px"> 
-        <nav>
-          <ul>
-            <li>
-              <a href="index.html" title= "Allez à l'accueil">Accueil</a>
-            </li>
-            <li>
-              <a href="carte.html" title= "Allez sur la carte">Carte</a>
-            </li>
-            <li>
-              <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
-            </li>
-            <li>
-              <a href="contact.html" title= "Nous contactez">Contact</a>
-            </li>
-          </ul>
-        </nav>
+      <div class="logos">
+        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache" height="150px">
+        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat" height="50px">
       </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html" title= "Allez à l'accueil">Accueil</a>
+          </li>
+          <li>
+            <a href="carte.html" title= "Allez sur la carte">Carte</a>
+          </li>
+          <li>
+            <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
+          </li>
+          <li>
+            <a href="contact.html" title= "Nous contactez">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
+    <!-- Corps de la page -->
     <main>
-        CARTE
-    </main>
       
+    </main>
+
+    <!-- Pied de page -->
     <footer>
-      <img src="Images/logos/Murat.svg" alt="Logo Murat" height="100px">
-    </footer>        
+      <h1>© Le Murat 2021 - Tous droits réservés</h1>
+    </footer>
   </body>
 </html>
