Update main html/css

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
         
       <!-- Plat du jour -->
       <div id="plat_du_jour" class="plat_du_jour">
-        <h2>Plat du jour</h2>
-        <h3>Carpaccio de flétan au foie gras et truffes</h2>
         <img src="Pictures/carapaccio.jpg" alt="Plat du jour" height="300px">
-        <p>38 €</p>
+        <p><b>Plat du jour</b><br><br>Carpaccio de flétan au foie gras et truffes<br><br>38 €</p>
       </div>
 
       <!-- Plats favoris des clients -->
@@ -159,7 +157,8 @@
 
     <!-- Pied de page -->
     <footer>
-      <h1>© Le Murat 2021 - Tous droits réservés</h1>
+      <p>© Le Murat 2021 - Tous droits réservés</p>
     </footer>
   </body>
 </html>
+
