Add hover overlay plats favoris + refactoring CSS

--- a/index.html
+++ b/index.html
@@ -56,57 +56,57 @@
         <table>
           <tr>
             <td>
-              <p>Consommé de faisan aux cèpes et aux quenelles à la moelle</p>
-              <img src="Pictures/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori" height="375px">
+              <div class="overlay"><p>Consommé de faisan aux cèpes et aux quenelles à la moelle</p></div>
+              <img src="Pictures/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori" height="400px">
             </td>
             <td>
-              <p>Filets de soles et rougets au romarin et légumes</p>
-              <img src="Pictures/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori" height="375px">
+              <div class="overlay"><p>Filets de soles et rougets au romarin et légumes</p></div>
+              <img src="Pictures/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori" height="400px">
             </td>
             <td>
-              <p>Foie gras poêlé et chutney d'oignons</p>
-              <img src="Pictures/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori" height="375px">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Filet Mignon en Croûte au Foie Gras & Morilles</p>
-              <img src="Pictures/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori" height="375px">
-            </td>
-            <td>
-              <p>Magrets de canard aux patates douces et cacao</p>
-              <img src="Pictures/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="375px">
-            </td>
-            <td>
-              <p>Pâtes fraiches au foie gras aux magrets et aux truffes</p>
-              <img src="Pictures/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="375px">
+              <div class="overlay"><p>Foie gras poêlé et chutney d'oignons</p></div>
+              <img src="Pictures/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori" height="400px">
             </td>
           </tr>
           <tr>
             <td>
-              <p>Tartare de bar au gingembre</p>
-              <img src="Pictures/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori" height="375px">
+              <div class="overlay"><p>Filet Mignon en Croûte au Foie Gras & Morilles</p></div>
+              <img src="Pictures/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori" height="400px">
             </td>
             <td>
-              <p>Velouté de cèpes et châtaignes</p>
-              <img src="Pictures/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori" height="375px">
+              <div class="overlay"><p>Magrets de canard aux patates douces et cacao</p></div>
+              <img src="Pictures/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="400px">
             </td>
             <td>
-              <p>Homard grillé, sabayon au champagne</p>
-              <img src="Pictures/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori" height="375px">
+              <div class="overlay"><p>Pâtes fraiches au foie gras aux magrets et aux truffes</p></div>
+              <img src="Pictures/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="400px">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="overlay"><p>Tartare de bar au gingembre</p></div>
+              <img src="Pictures/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori" height="400px">
+            </td>
+            <td>
+              <div class="overlay"><p>Velouté de cèpes et châtaignes</p></div>
+              <img src="Pictures/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori" height="400px">
+            </td>
+            <td>
+              <div class="overlay"><p>Homard grillé, sabayon au champagne</p></div>
+              <img src="Pictures/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori" height="400px">
             </td>
           </tr>
         </table>
       </div>
 
         <!-- Équipe en cuisine -->
-        <div id="équipe" class="équipe">
+        <div id="equipe" class="equipe">
           <h2>La cuisine, plus qu'une passion</h2>
           <p>Nous transmettons notre savoir-faire culinaire de générations en générations.
-          C'est depuis 1910 que notre chic bistrot propose aux fines bouches parisiennes,
+          <br><br>C'est depuis 1910 que notre chic bistrot propose aux fines bouches parisiennes,
           des saveurs irrésistibles, grâce aux chefs les plus talentueux du pays.
-          Nous cuisinons uniquement des produits frais du terroir français, sélectionnés
-          avec soin. Venez faire passer un moment inoubliable à vos papilles gustatives
+          <br><br>Nous cuisinons uniquement des produits frais du terroir français, sélectionnés
+          avec soin.<br><br>Venez faire passer un moment inoubliable à vos papilles gustatives
           dans notre restaurant décoré chaleureusement.</p>
 
         <!-- Slideshow des chefs -->
@@ -125,7 +125,7 @@
           </div>
           <div class="slide animation">
             <img src="Pictures/Équipe/ademar_okardetour.jpg" style="width:100%">
-            <p>Idemat OKARDETOUR - Chef rôtissier</p>
+            <p>Idemar OKARDETOUR - Chef rôtissier</p>
           </div>
         </div>
           
