Rename classes & ids

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       </div>
         
       <!-- Plat du jour -->
-      <div id="plat_du_jour" class="plat_du_jour">
+      <div id="plat-du-jour" class="plat-du-jour">
         <img src="Pictures/carapaccio.jpg" alt="Plat du jour" height="400px">
         <p><b>Plat du jour</b><br><br>Carpaccio de flétan au foie gras et truffes<br><br>38 €</p>
       </div>
 
       <!-- Plats favoris des clients -->
-      <div id="plats_favoris" class="plats_favoris">
+      <div id="plats-favoris" class="plats-favoris">
         <h2>Les plats favoris de nos clients</h2>
         <table>
           <tr>
