Resize picture filet mignon + Fix pictures overflow plats favoris

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
       <!-- Plat du jour -->
       <div id="plat-du-jour" class="plat-du-jour">
-        <img src="Pictures/carapaccio.jpg" alt="Plat du jour" height="400px">
+        <img src="Pictures/carapaccio.jpg" alt="Plat du jour">
         <p><b>Plat du jour</b><br><br>Carpaccio de flétan au foie gras et truffes<br><br>38 €</p>
       </div>
 
@@ -57,43 +57,43 @@
           <tr>
             <td>
               <div class="overlay"><p>Consommé de faisan aux cèpes et aux quenelles à la moelle</p></div>
-              <img src="Pictures/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori" height="400px">
+              <img src="Pictures/Plats favoris/consomme_faisan_cepes_quenelles_moelle.jpg" alt="1er plat favori">
             </td>
             <td>
               <div class="overlay"><p>Filets de soles et rougets au romarin et légumes</p></div>
-              <img src="Pictures/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/filets_soles_rougets_romarin_legumes.jpg" alt="2ème plat favori">
             </td>
             <td>
               <div class="overlay"><p>Foie gras poêlé et chutney d'oignons</p></div>
-              <img src="Pictures/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/foie_gras_poele_chutney_oignons.jpg" alt="3ème plat favori">
             </td>
           </tr>
           <tr>
             <td>
               <div class="overlay"><p>Filet Mignon en Croûte au Foie Gras & Morilles</p></div>
-              <img src="Pictures/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/filet_mignon_croute_foie_gras_morilles.jpg" alt="4ème plat favori">
             </td>
             <td>
               <div class="overlay"><p>Magrets de canard aux patates douces et cacao</p></div>
-              <img src="Pictures/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/magrets_canard_patates_douces_cacao.jpg" alt="5ème plat favori">
             </td>
             <td>
               <div class="overlay"><p>Pâtes fraiches au foie gras aux magrets et aux truffes</p></div>
-              <img src="Pictures/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/pates_foie_gras_magrets_truffes.jpg" alt="6ème plat favori">
             </td>
           </tr>
           <tr>
             <td>
               <div class="overlay"><p>Tartare de bar au gingembre</p></div>
-              <img src="Pictures/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/tartare_bar_gingembre.jpg" alt="7ème plat favori">
             </td>
             <td>
               <div class="overlay"><p>Velouté de cèpes et châtaignes</p></div>
-              <img src="Pictures/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/veloute_cepes_chataignes.jpg" alt="8ème plat favori">
             </td>
             <td>
               <div class="overlay"><p>Homard grillé, sabayon au champagne</p></div>
-              <img src="Pictures/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori" height="400px">
+              <img src="Pictures/Plats favoris/homard_grille_sabayon_champagne.jpg" alt="9ème plat favori">
             </td>
           </tr>
         </table>
