--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Bannière -->
     <header>
       <div class="logos">
-        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache" height="150px">
-        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat" height="50px">
+        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
       </div>
       <nav>
         <ul>
