Fix banner + Try to stick nav

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <!-- Bannière -->
     <header>
+    <div class="banner">
       <div class="logos">
         <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
         <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
@@ -32,6 +33,7 @@
           </li>
         </ul>
       </nav>
+      </div>
     </header>
 
     <!-- Corps de la page -->
