Updated footer + deleted contact.html + Renamed Fonts folder

--- a/carte.html
+++ b/carte.html
@@ -12,27 +12,26 @@
   <body>
     <!-- Bannière -->
     <header>
+    <div class="banner">
       <div class="logos">
-        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache" height="150px">
-        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat" height="50px">
+        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html" title= "Allez à l'accueil">Accueil</a>
-          </li>
-          <li>
-            <a href="carte.html" title= "Allez sur la carte">Carte</a>
-          </li>
-          <li>
-            <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
-          </li>
-          <li>
-            <a href="contact.html" title= "Nous contactez">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      </div>
     </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html" title= "Allez à l'accueil">Accueil</a>
+        </li>
+        <li>
+          <a href="carte.html" title= "Allez sur la carte">Carte</a>
+        </li>
+        <li>
+          <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
+        </li>
+      </ul>
+    </nav>
 
     <!-- Corps de la page -->
     <main>
@@ -41,7 +40,9 @@
 
     <!-- Pied de page -->
     <footer>
-      <h1>© Le Murat 2021 - Tous droits réservés</h1>
+      <p><b>Nous contacter</b><br>1 boulevard Murat - 75016 PARIS<br>Tel : +33 1 46 51 33 17<br>Fax : +33 1 46 51 88 54
+      <br>Courriel : contact@restaurant-lemurat.com</p>
+      <p>© Le Murat 2021 - Tous droits réservés</p>
     </footer>
   </body>
 </html>
