--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
         <li>
           <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
         </li>
-        <li>
-          <a href="contact.html" title= "Nous contactez">Contact</a>
-        </li>
       </ul>
     </nav>
 
@@ -159,6 +156,8 @@
 
     <!-- Pied de page -->
     <footer>
+      <p><b>Nous contacter</b><br>1 boulevard Murat - 75016 PARIS<br>Tel : +33 1 46 51 33 17<br>Fax : +33 1 46 51 88 54
+      <br>Courriel : contact@restaurant-lemurat.com</p>
       <p>© Le Murat 2021 - Tous droits réservés</p>
     </footer>
   </body>
