--- a/reservation.html
+++ b/reservation.html
@@ -8,35 +8,39 @@
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Murat | Réservation</title>
   </head>
+
   <body>
+    <!-- Bannière -->
     <header>
-      <div class="banner">
-        <img src="Images/logos/Vache3.svg" alt="Logo vache" height="200px"> 
-        <nav>
-          <ul>
-            <li>
-              <a href="index.html" title= "Allez à l'accueil">Accueil</a>
-            </li>
-            <li>
-              <a href="carte.html" title= "Allez sur la carte">Carte</a>
-            </li>
-            <li>
-              <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
-            </li>
-            <li>
-              <a href="contact.html" title= "Nous contactez">Contact</a>
-            </li>
-          </ul>
-        </nav>
+    <div class="banner">
+      <div class="logos">
+        <img src="Pictures/Logos/Vache3.svg" alt="Logo vache">
+        <img src="Pictures/Logos/Murat.svg" alt="Logo Murat">
+      </div>
       </div>
     </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html" title= "Allez à l'accueil">Accueil</a>
+        </li>
+        <li>
+          <a href="carte.html" title= "Allez sur la carte">Carte</a>
+        </li>
+        <li>
+          <a href="reservation.html" title= "Allez sur la page des réservations">Réservation</a>
+        </li>
+      </ul>
+    </nav>
 
     <main>
-        RESERVATION
     </main>
       
+    <!-- Pied de page -->
     <footer>
-      <img src="Images/logos/Murat.svg" alt="Logo Murat" height="100px">
-    </footer>        
+      <p><b>Nous contacter</b><br>1 boulevard Murat - 75016 PARIS<br>Tel : +33 1 46 51 33 17<br>Fax : +33 1 46 51 88 54
+      <br>Courriel : contact@restaurant-lemurat.com</p>
+      <p>© Le Murat 2021 - Tous droits réservés</p>
+    </footer>
   </body>
 </html>
