--- a/reservation.html
+++ b/reservation.html
@@ -34,6 +34,40 @@
     </nav>
 
     <main>
+      <h1>Réserver une table</h1>
+
+      <form>
+        <label for="lname">Nom</label><br>
+        <input type="text" id="lname" name="lname" placeholder="Dupont" required><br><br>
+        
+        <label for="fname">Prénom</label><br>
+        <input type="text" id="fname" name="fname" placeholder="Jean" required><br><br>
+
+        <label for="phone">Numéro de téléphone</label><br>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="06 12 34 54 67" required><br><br>
+
+        <label for="datetime">Date</label><br>
+        <input type="datetime-local" id="datetime" name="datetime" required><br><br>
+
+        <label for="people">Nombre de personnes</label><br>
+        <input type="number" id="people" name="people" min="1" max="20" required><br><br>
+
+        <label>Salle</label><br>
+        <input type="radio" id="inside" name="place" value="inside">
+        <label for="place">Intérieur</label><br>
+        <input type="radio" id="outside" name="place" value="terrace">
+        <label for="place">Terrasse</label><br>
+        <input type="radio" id="balcony" name="place" value="balcony">
+        <label for="place">Balcon</label><br><br>
+
+        <label for="note">Notes de réservation (facultatif)</label><br>
+        <textarea id="note" name="note" placeholder="Consignes concernant votre réservation (exemple : Décoration de table, intolérances ou allergies, etc...)."></textarea><br><br>
+
+        <input type="submit" value="Réserver">
+      </form>
+
+      <p><em>Pour toute réservation spéciale (+ de 20 personnes ou autre raison), veuillez nous contacter par téléphone ou par courriel
+      (voir coordonnées ci-dessous).</em></p>
     </main>
       
     <!-- Pied de page -->
