--- a/carte.html
+++ b/carte.html
@@ -35,7 +35,28 @@
 
     <!-- Corps de la page -->
     <main>
-      
+      <div class="breakfast">
+        <h1>Petit déjeuner</h1>
+        <h2>Le classique</h2>
+        <p>Double expresso</p>
+        <h2>En ce moment</h2>
+        <h2>Poissons</h2>
+        <h2>Viandes</h2>
+        <h2>Accompagnements</h2>
+        <h2>Fromage et desserts</h2>
+      </div>
+      <div class="Menu">
+        <h1>Carte</h1>
+        <h2>Entrées</h2>
+        <h2>En ce moment</h2>
+        <h2>Poissons</h2>
+        <h2>Viandes</h2>
+        <h2>Accompagnements</h2>
+        <h2>Fromage et desserts</h2>
+      </div>
+      <div class="drinks">
+        <h1>Boissons</h1>
+      </div>
     </main>
 
     <!-- Pied de page -->
