--- a/carte.html
+++ b/carte.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <!-- Bannière -->
+    <!-- Banner -->
     <header>
     <div class="banner">
       <div class="logos">
@@ -33,33 +33,159 @@
       </ul>
     </nav>
 
-    <!-- Corps de la page -->
+    <!-- Main -->
     <main>
+      <!-- Breakfast -->
       <div class="breakfast">
-        <h1>Petit déjeuner</h1>
-        <h2>Le classique</h2>
-        <p>Double expresso</p>
-        <h2>En ce moment</h2>
-        <h2>Poissons</h2>
-        <h2>Viandes</h2>
-        <h2>Accompagnements</h2>
-        <h2>Fromage et desserts</h2>
+        <h1>PETIT DEJEUNER</h1>
+        <!-- Classic -->
+        <h2>Le classique 20€</h2>
+        <h3>Double expresso</h3>
+        <h3>ou Chocolat chaud maison</h3>
+        <h3>ou Thé "MARIAGE FRERES"</h3>
+        <br><br>
+        <h3>Jus d'orange</h3>
+        <h3>ou Jus de pamplemousse frais</h3>
+        <br><br>
+        <h3>Salade de fruits frais</h3>
+        <br><br>
+        <h3>Panier de mini viennoiseries</h3>
+        <h3>ou Ficelle grilée</h3>
+        <br><br>
+        <p>Beurre et confiture</p>
+
+        <!-- Fruits and dairy -->
+        <h2>Fruits et laitages</h2>
+        <!-- Granola -->
+        <h3>Granolas bios</h3>
+        <p>Yaourt à la grecque et miel 10€</p>
+        <p>Yaourt à la grecque et fruits frais 15€</p>
+        <!-- Cottage cheese -->
+        <h3>Fromage blanc 0% 8€</h3>
+        <p>Nature</p>
+        <p>Miel</p>
+        <!-- Goat cheese -->
+        <h3>Chèvre frais 14€</h3>
+        <p>"Dominique Fabre"</p>
+        <!-- fruits salad -->
+        <h3>Salade de fruits frais 15€</h3>
+
+        <!-- Eggs -->
+        <h2>Oeufs</h2>
+        <!-- Omelet -->
+        <h3>Omelette blanche bio 15€</h3>
+        <br><br>
+        <!-- Fried egg -->
+        <h3>Oeufs bio plat nature 9€</h3>
+        <h3>Oeufs bio plat bacon 12€</h3>
+        <h3>Oeufs bio plat saumon fumé 15€</h3>
+        <br><br>
+        <!-- Scrambled egg -->
+        <h3>Oeufs bio brouilés nature 12€</h3>
+        <h3>Oeufs bio brouilés bacon 14€</h3>
+        <h3>Oeufs bio brouilés saumon fumé 15€</h3>
+        <br><br>
+        <!-- Boiled egg -->
+        <h3>Oeufs bio coque 4€</h3>
+
+        <!-- Hot drinks -->
+        <h2>Boissons chaudes</h2>
+        <!-- Coffee -->
+        <h3>Café expresso 3.9€</h3>
+        <h3>Double expresso 7.5€</h3>
+        <p>Café crème</p>
+        <p>Cappuccino</p>
+        <br><br>
+        <!-- Tea -->
+        <h3>Thés "MARIAGE FRERES" 8€</h3>
+        <p>Earl grey</p>
+        <p>Ceylan</p>
+        <p>Darjeeling</p>
+        <p>Marco polo</p>
+        <p>Thé vert Fuji Yama</h3>
+        <p>Thé vert jasmin</h3>
+          <br><br>
+        <!-- French tea -->
+        <h3>French breakfast tea 8€</h3>
+        <!-- Infusion -->
+        <h3>Infusions 6€</h3>
+        <!-- Homemade hot chocolate -->
+        <h3>Chocolat chaud maison 8€</h3>
+        <!-- Milk -->
+        <h3>Lait chaud</h3>
+        <p>Nature 5€</p>
+        <p>Vanille 6.5€</p>
+
+        <!-- Juice and water -->
+        <h2>Les jus et eaux</h2>
+        <!-- Juice -->
+        <h3>Jus 7€</h3>
+        <p>Oranges fraiches</p>
+        <p>Pamplemousses frais</p>
+        <p>Citrons frais</p>
+        <br><br>
+        <!-- Minute juice -->
+        <h3>Jus minutes 9€</h3>
+        <p>Carottes bios</p>
+        <p>Green detox</p>
+        <br><br>
+        <!-- Water -->
+        <h3>Vittel, San Pellegrino, Perrier</h3>
+        <p>50 cL 6€</p>
+        <p>100 cL 7.5€</p>
+
+        <!-- Pastries -->
+        <h2>Viennoiseries</h2>
+        <!-- Normal -->
+        <h3>Croissant 4.5€</h3>
+        <h3>Pain au chocolat 4.5€</h3>
+        <br><br>
+        <!-- Mini -->
+        <h3>Mini croissant 3€</h3>
+        <h3>Mini pain au chocolat 3€</h3>
+        <br><br>
+        <!-- mix -->
+        <h3>Panier de mini viennoiseries assorties 10€</h3>
+
+        <!-- Bread and gourmandises -->
+        <h2>Pains et gourmandises</h2>
+        <!-- Ficelle -->
+        <h3>Ficelle grillée 6€</h3>
+        <p>Beurre et confiture</p>
+        <br><br>
+        <!-- poilâne -->
+        <h3>Pain poilâne grillé 6€</h3>
+        <p>Beurre et confiture</p>
+        <br><br>
+        <!-- Toast -->
+        <h3>Toast de pain de mie 5€</h3>
+        <p>Beurre et confiture</p>
       </div>
-      <div class="Menu">
-        <h1>Carte</h1>
+
+      <!-- Launch -->
+      <div class="Launch">
+        <h1>DEJEUNER</h1>
+        <!-- Appetizer -->
         <h2>Entrées</h2>
+        <!-- Temporary -->
         <h2>En ce moment</h2>
+        <!-- Fish -->
         <h2>Poissons</h2>
+        <!-- Meat -->
         <h2>Viandes</h2>
+        <!-- Trimming -->
         <h2>Accompagnements</h2>
+        <!-- Cheese and desserts -->
         <h2>Fromage et desserts</h2>
       </div>
+
+      <!-- Drinks -->
       <div class="drinks">
         <h1>Boissons</h1>
       </div>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
       <p><b>Nous contacter</b><br>1 boulevard Murat - 75016 PARIS<br>Tel : +33 1 46 51 33 17<br>Fax : +33 1 46 51 88 54
       <br>Courriel : contact@restaurant-lemurat.com</p>
@@ -67,3 +193,4 @@
     </footer>
   </body>
 </html>
+  
